Begin roughing in selection screen.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
   </head>
   <body>
     <main>
-      <section id="game"></section>
+      <section id="game">
+        <div id="game__selection-screen">
+          <div class="game__commentary">
+            <h2>Pick one</h2>
+          </div>
+          <div id="selection-screen__options">
+            <button>
+              <img src="./images/rock.png" alt="hand in 'rock' position" />
+              <h3>Rock</h3>
+            </button>
+            <button>
+              <img src="./images/paper.png" alt="hand in 'paper' position" />
+              <h3>Paper</h3>
+            </button>
+            <button>
+              <img
+                src="./images/scissors.png"
+                alt="hand in 'scissors' position"
+              />
+              <h3>Scissors</h3>
+            </button>
+          </div>
+        </div>
+        <div id="game__results-screen">
+          <div></div>
+        </div>
+        <div></div>
+      </section>
     </main>
   </body>
 </html>
