--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Advent of CSS 2022 - Day 12 - Rock, Paper, Scissors</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css" />
+    <link rel="stylesheet" href="./normalize.css" />
   </head>
   <body>
     <main>
